@@ -1,5 +1,10 @@
 2003-05-29  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Disable the Extract button when its pressed.
+
+2003-05-29  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-musicbrainz.c:
 	Fix a typo so that multiple artist albums should work.
 
